k8s/identity-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: HCL.CS.SF-identity
spec:
  selector:
    app: HCL.CS.SF-identity
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
