k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: HCL.CS.SF-ingress
spec:
  rules:
    - host: HCL.CS.SF.local
      http:
        paths:
          - path: /identity
            pathType: Prefix
            backend:
              service:
                name: HCL.CS.SF-identity
                port:
                  number: 80
